src/test/ui/compile-fail-migration/regions-ret-borrowed.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-ret-borrowed.rs:23:14
   |
LL |     with(|o| o)
   |              ^

error: unsatisfied lifetime constraints
  --> $DIR/regions-ret-borrowed.rs:23:14
   |
LL |     with(|o| o)
   |          ----^
   |          ||  |
   |          ||  return requires that `'1` must outlive `'2`
   |          |has type `&'1 isize`
   |          lifetime `'2` appears in return type

error: aborting due to previous error

